fixed overflow

--- a/app/assets/stylesheets/users/_dashboard.scss
+++ b/app/assets/stylesheets/users/_dashboard.scss
@@ -27,7 +27,9 @@
   padding: 0vw 10vw;
   overflow: scroll;
 }
-
+.trans-header {
+  margin-bottom: 0px;
+}
 
 
 
